<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_icon_color"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_in_address_tint"
            android:inputType="text" />

    <ImageView
        android:id="@+id/inGPSAddress"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_add_location_24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/outAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_out_address_tint"
            android:inputType="text" />

        <ImageView
            android:id="@+id/outGPSAddress"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_add_location_24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/cancel_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/add_rec_btn" />

    </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_date_icon"
        android:layout_gravity="center|top">

        <TextView
            android:id="@+id/current_date"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </FrameLayout>

</FrameLayout>